добавляет aria атрибуты интерактивным элементам

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         <div class="header__top header__top--closed header__top--nojs">
           <div class="header__container">
             <div class="header__logo-container">
-              <a class="header__logo">
+              <a class="header__logo" aria-label="Логотип приложения PINK">
                 <svg class="header__logo-mobile-white" width="75" height="22">
                   <use xlink:href="#logo-pink-white-mobile"></use>
                 </svg>
@@ -193,12 +193,12 @@
           </div>
         </div>
         <button class="review__toggle review__toggle--prev" tabindex="0">
-          <svg class="arrow" width="22" height="41" title="предыдущий отзыв">
+          <svg class="arrow" width="22" height="41">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-left"></use>
           </svg>предыдущий отзыв
         </button>
         <button class="review__toggle review__toggle--next" tabindex="0">
-          <svg class="arrow" width="22" height="41" title="следующий отзыв">
+          <svg class="arrow" width="22" height="41">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-review-arrow-right"></use>
           </svg>следующий отзыв
         </button>
