--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
         <div class="header__top header__top--closed header__top--nojs">
           <div class="header__container">
             <div class="header__logo-container">
-              <a class="header__logo" href="index.html">
+              <a class="header__logo" href="index.html" aria-label="Переход на главную страницу">
                 <svg class="header__logo-mobile-white" width="75" height="22">
                   <use xlink:href="#logo-pink-white-mobile"></use>
                 </svg>
@@ -221,7 +221,7 @@
 
   <footer class="footer footer container">
     <h2 class="visually-hidden">Мы в соцсетях</h2>
-    <a class="footer__logo" href="index.html">
+    <a class="footer__logo" href="index.html" aria-label="Переход на главную страницу">
       <svg class="footer__svg footer__logo-mobile-blue" width="147" height="40">
         <use xlink:href="#logo-pink-blue-mobile"></use>
       </svg>
