редактирует имена классов competition

--- a/source/form.html
+++ b/source/form.html
@@ -73,7 +73,7 @@
       </h2>
       <form class="competition__form" action="https://echo.htmlacademy.ru" method="post">
 
-        <fieldset class="filters-group  filters-group__fullname input-block">
+        <fieldset class="competition__filters filters-group  filters-group__fullname input-block">
           <div class="filters-group__narrow">
             <p class="input-block__item input-block__item--input">
               <label class="input-block__fullname-label" for="surname-field">Фамилия:</label>
@@ -92,7 +92,7 @@
           </div>
         </fieldset>
 
-        <fieldset class="filters-group filters-group__achievements input-block">
+        <fieldset class="competition__filters filters-group filters-group__achievements input-block">
           <h3 class="filters-group__title">Ваши безбашенные достижения в путешествии</h3>
           <div class="filters-group__wide">
             <div class="input-block__list">
@@ -137,7 +137,7 @@
           </div>
         </fieldset>
 
-        <fieldset class="filters-group filters-group__contacts input-block">
+        <fieldset class="competition__filters filters-group filters-group__contacts input-block">
           <h3 class="filters-group__title">Контактная информация</h3>
           <div class="filters-group__wide">
             <div class="filters-group__contact-info">
@@ -155,7 +155,7 @@
           </div>
         </fieldset>
 
-        <fieldset class="filters-group filters-group__platform input-block">
+        <fieldset class="competition__filters filters-group filters-group__platform input-block">
           <h3 class="filters-group__title">С каким приложением путешествовали?</h3>
           <div class="filters-group__narrow">
             <ul class="input-block__list input-block__list-radio">
@@ -178,7 +178,7 @@
           </div>
         </fieldset>
 
-        <fieldset class="filters-group filters-group__emotions input-block">
+        <fieldset class="competition__filters filters-group filters-group__emotions input-block">
           <h3 class="filters-group__title">Опишите свои эмоции</h3>
           <div class="filters-group__wide">
             <textarea class="input-block__input input-block__input--textarea" name="emotions" id="emotions-field" cols="30"
