добавляет текстовое описание кнопкам меню и индикаторам слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -35,10 +35,10 @@
               </a>
             </div>
             <button class="header__button header__button--hidden" type="button">
-              <svg class="header__button-svg header__button-svg--burger" width="50" height="24">
+              <svg class="header__button-svg header__button-svg--burger" width="50" height="24" title="открыть меню">
                 <use xlink:href="#icon-menu-burger"></use>
               </svg>
-              <svg class="header__button-svg header__button-svg--cross" width="24" height="23">
+              <svg class="header__button-svg header__button-svg--cross" width="24" height="23" title="закрыть меню">
                 <use xlink:href="#icon-menu-cross"></use>
               </svg>
             </button>
@@ -204,13 +204,13 @@
         </button>
         <p class="review__toggles slider">
           <button class="slider__toggle slider__toggle--check" type="button">
-            <span class="visually-hidden">1</span>
+            <span class="visually-hidden">слайд 1</span>
           </button>
           <button class="slider__toggle" type="button">
-            <span class="visually-hidden">2</span>
+            <span class="visually-hidden">слайд 2</span>
           </button>
           <button class="slider__toggle" type="button">
-            <span class="visually-hidden">3</span>
+            <span class="visually-hidden">слайд 3</span>
           </button>
         </p>
       </div>
